trunk/Archive2/3a/c59d8a9342ac83/main.cpp
#include <type_traits>

template<typename ComponentType = int>
struct baz {
    template<typename T, typename std::enable_if<std::is_convertible<ComponentType, T>::value>::type>
    operator baz<T>() {
        return {};
    }
};

int main() {
    baz<> b = baz<float>();
}
